Game is not complete

--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <titl>Baseball Trivia </titl></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
+
+<div class="container">
+
+    <h1 id="topText">Baseball Trivia</h1>
+
+    <div class="jumbotron text-center" id="gameScreen">
+        <h1 id="start">START</h1>
+    </div>
+
+    <h2 id="bottomText" class="text-right">game on!</h2>
+
+</div>
+
 
 </body>
 </html>
